agregado de img y nuevo layaout para productos

--- a/mesa-2.html
+++ b/mesa-2.html
@@ -67,106 +67,107 @@
                         <img src="img/products/mesa-2.png" alt="12 Power Banks" class="img-responsive">
                     </div>
                     <div class="product-description">
-                        <h2>12 Power Banks</h2>
-                        <p>Perfecto para:</p>
-                        <ul class="list-description">
+                      <h2>12 Power Banks</h2>
+                      <p>Super Power Station</p>
+                      <div class="list-description">
+                        <h3>Perfecto para:</h3>
+                        <ul>
                           <li>Restaurants</li>
                           <li>Cafes</li>
                           <li>Bares</li>
                         </ul>
-                        <div class="content-photos-products">
-                          <div class="photos-products">
-                            <div class="photo">
-                              <img src="img/products/mesa-2/charger.jpg" alt="" class="img-responsive">
-                            </div>
-                            <div class="text">
-                              <p>Carga 2 dispositivos simultáneamente</p>
-                            </div>
+                      </div>
+                      <div class="content-photos-products">
+                        <div class="photos-products">
+                          <div class="photo">
+                            <img src="img/products/mesa-2/charger.jpg" alt="" class="img-responsive">
                           </div>
-                          <div class="photos-products">
-                            <div class="photo">
-                              <img src="img/products/mesa-2/cables.jpg" alt="" class="img-responsive">
-                            </div>
-                            <div class="text">
-                              <p>Cable trenzado</p>
-                            </div>
-                          </div>
-                          <div class="photos-products">
-                            <div class="photo">
-                              <img src="img/products/mesa-2/design.jpg" alt="" class="img-responsive">
-                            </div>
-                            <div class="text">
-                              <p>Publicidad Customizable</p>
-                            </div>
-                          </div>
-                          <div class="photos-products">
-                            <div class="photo">
-                              <img src="img/products/features/meeting.jpg" alt="" class="img-responsive">
-                            </div>
-                            <div class="text">
-                              <p>Mantenga a sus clientes con carga mientras se divierten</p>
-                            </div>
-                          </div>
-                          <div class="photos-products">
-                            <div class="photo">
-                              <img src="img/products/mesa-2/chargers.jpg" alt="" class="img-responsive">
-                            </div>
-                            <div class="text">
-                              <p>Doce espacios de carga de Power Bank: Carga hasta 12 Power Banks al mismo tiempo</p>
-                            </div>
+                          <div class="text">
+                            <p>Carga 2 dispositivos simultáneamente</p>
                           </div>
                         </div>
-                        <ul class="list-description">
-                            <li>
-                                <p>
-                                  <b>Dimensiones del Power Bank:</b>
-                                  85 x 170 x 24mm
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                  <b>Dimensiones de la estación:</b>
-                                  240 x 317 x 180mm
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                  <b>Salida de energia:</b>
-                                  5V/ 1.0A x2
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                  <b>Cantidad de Power Banks:</b>
-                                  6 PCS
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                  <b>Capacidad de Batería:</b>
-                                  5000mAh
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                  <b>Cables de Carga:</b>
-                                </p>
-                                <ul class="list-connection">
-                                  <li>
-                                    <img src="img/icon/usb-1.jpg" alt="">
-                                    Micro USB Cable x 2
-                                  </li>
-                                  <li>
-                                    <img src="img/icon/apple-l.jpg" alt="">
-                                    Apple MFi Lightning Cable x 1
-                                  </li>
-                                  <li>
-                                    <img src="img/icon/usb-c.jpg" alt="">
-                                    USB Type C Cable x 1
-                                  </li>
-                                </ul>
-                            </li>
+                        <div class="photos-products">
+                          <div class="photo">
+                            <img src="img/products/mesa-2/cables.jpg" alt="" class="img-responsive">
+                          </div>
+                          <div class="text">
+                            <p>Cable trenzado</p>
+                          </div>
+                        </div>
+                        <div class="photos-products">
+                          <div class="photo">
+                            <img src="img/products/mesa-2/design.jpg" alt="" class="img-responsive">
+                          </div>
+                          <div class="text">
+                            <p>Publicidad Customizable</p>
+                          </div>
+                        </div>
+                        <div class="photos-products">
+                          <div class="photo">
+                            <img src="img/products/features/meeting.jpg" alt="" class="img-responsive">
+                          </div>
+                          <div class="text">
+                            <p>Mantenga a sus clientes con carga mientras se divierten</p>
+                          </div>
+                        </div>
+                        <div class="photos-products">
+                          <div class="photo">
+                            <img src="img/products/mesa-2/chargers.jpg" alt="" class="img-responsive">
+                          </div>
+                          <div class="text">
+                            <p>Doce espacios de carga de Power Bank: Carga hasta 12 Power Banks al mismo tiempo</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="list-description">
+                        <h3>Especificaciones</h3>
+                        <ul>
+                          <li>
+                            <p>
+                              <b>Dimensiones del Power Bank:</b>
+                              85 x 170 x 24mm
+                            </p>
+                          </li>
+                          <li>
+                            <p>
+                              <b>Dimensiones de la estación:</b>
+                              240 x 317 x 180mm
+                            </p>
+                          </li>
+                          <li>
+                            <p>
+                              <b>Salida de energia:</b>
+                              5V/ 1.0A x2
+                            </p>
+                          </li>
+                          <li>
+                            <p>
+                              <b>Cantidad de Power Banks:</b>
+                              6 PCS
+                            </p>
+                          </li>
+                          <li>
+                            <p>
+                              <b>Capacidad de Batería:</b>
+                              5000mAh
+                            </p>
+                          </li>
                         </ul>
+                      </div>
+                      <div class="list-connection">
+                        <h3>Cables de Carga</h3>
+                        <ul>
+                          <li>
+                            <img src="img/icon/usb-1.jpg" alt=""> Micro USB Cable
+                          </li>
+                          <li>
+                            <img src="img/icon/apple-l.jpg" alt=""> Apple MFi Lightning Cable
+                          </li>
+                          <li>
+                            <img src="img/icon/usb-c.jpg" alt=""> USB Type C Cable
+                          </li>
+                        </ul>
+                      </div>
                     </div>
                 </div>
             </div>
