--- a/mesa-3.html
+++ b/mesa-3.html
@@ -83,13 +83,16 @@
           </div>
           <div class="product-description">
             <h2>Easy Charge</h2>
-            <p>Perfecto para:</p>
-            <ul class="list-description">
-              <li>Restaurants</li>
-              <li>Cafes</li>
-              <li>Bares</li>
-              <li>Eventos</li>
-            </ul>
+            <p>Super Power Station</p>
+            <div class="list-description">
+              <h3>Perfecto para:</h3>
+              <ul>
+                <li>Restaurants</li>
+                <li>Cafes</li>
+                <li>Bares</li>
+                <li>Eventos</li>
+              </ul>
+            </div>
             <div class="content-photos-products">
               <div class="photos-products">
                 <div class="photo">
@@ -132,45 +135,46 @@
                 </div>
               </div>
             </div>
-            <ul class="list-description">
-              <li>
-                <p>
-                  <b>Dimensiones de la estación:</b>
+            <div class="list-description">
+              <h3>Especificaciones</h3>
+              <ul>
+                <li>
+                  <p>
+                    <b>Dimensiones de la estación:</b>
                     23,7 13 x 11,4cm
-                </p>
-              </li>
-              <li>
-                <p>
-                  <b>Cantidad de cargas simultaneas:</b>
-                  12 Dispositivos
-                </p>
-              </li>
-              <li>
-                <p>
-                  <b>Capacidad de Batería:</b>
-                  20800mAh
-                </p>
-              </li>
-              <li>
-                <p>
-                  <b>Con pantalla:</b>
-                  Pantalla de 7' LCD Full Color con resolución 600x1024 pixeles.
-                </p>
-              </li>
-              <li>
-                <p>
-                  <b>Cables de Carga:</b>
-                </p>
-                <ul class="list-connection">
-                  <li>
-                    <img src="img/icon/usb-1.jpg" alt=""> Micro USB Cable x 2
-                  </li>
-                  <li>
-                    <img src="img/icon/apple-l.jpg" alt=""> Apple MFi Lightning Cable x 1
-                  </li>
-                </ul>
-              </li>
-            </ul>
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    <b>Cantidad de cargas simultaneas:</b>
+                    12 Dispositivos
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    <b>Capacidad de Batería:</b>
+                    20800mAh
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    <b>Con pantalla:</b>
+                    Pantalla de 7' LCD Full Color con resolución 600x1024 pixeles.
+                  </p>
+                </li>
+              </ul>
+            </div>
+            <div class="list-connection">
+              <h3>Cables de Carga</h3>
+              <ul>
+                <li>
+                  <img src="img/icon/usb-1.jpg" alt=""> Micro USB Cable x 2
+                </li>
+                <li>
+                  <img src="img/icon/apple-l.jpg" alt=""> Apple MFi Lightning Cable x 1
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
