--- a/pared-1.html
+++ b/pared-1.html
@@ -67,69 +67,69 @@
                         <img src="img/products/pared-1.png" alt="Power Bank de pared 8 dispositivos" class="img-responsive">
                     </div>
                     <div class="product-description">
-                        <h2>Power Bank de pared 8 dispositivos</h2>
-                        <p>Perfecto para:</p>
-                        <ul class="list-description">
+                      <h2>Easy Charge</h2>
+                      <p>Super Power Station</p>
+                      <div class="list-description">
+                        <h3>Perfecto para:</h3>
+                        <ul>
                           <li>Lobbies de Hoteles</li>
                           <li>Areas de espera</li>
                           <li>Exhibiciones</li>
                           <li>Eventos</li>
                         </ul>
-                        <div class="content-photos-products">
-                          <div class="photos-products">
-                            <div class="photo">
-                              <img src="img/products/6-power-banks/promo-3.jpg" alt="" class="img-responsive">
-                            </div>
-                            <div class="text">
-                              <p>Publicidad Customizable</p>
-                            </div>
+                      </div>
+                      <div class="content-photos-products">
+                        <div class="photos-products">
+                          <div class="photo">
+                            <img src="img/products/pared-1/ads.jpg" alt="" class="img-responsive">
                           </div>
-                          <div class="photos-products">
-                            <div class="photo">
-                              <img src="img/products/6-power-banks/promo-3.jpg" alt="" class="img-responsive">
-                            </div>
-                            <div class="text">
-                              <p>Permite cargar 8 dispositivos simultáneos.</p>
-                            </div>
+                          <div class="text">
+                            <p>Publicidad Customizable</p>
                           </div>
                         </div>
-                        <ul class="list-description">
-                            <li>
-                                <p>
-                                  <b>Dimensiones:</b>
-                                  1310 x 480 x 285 mm
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                  <b>Salida de energia:</b>
-                                  5V/ 1.5A x8
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                  <b>Cables de Carga:</b>
-                                </p>
-                                <ul class="list-connection">
-                                  <li>
-                                    <img src="img/icon/usb-1.jpg" alt="">
-                                    Micro USB Cable x 2
-                                  </li>
-                                  <li>
-                                    <img src="img/icon/apple-l.jpg" alt="">
-                                    Apple MFi Lightning Cable x 1
-                                  </li>
-                                  <li>
-                                    <img src="img/icon/apple-large.jpg" alt="">
-                                    Apple Cable Cable x 1
-                                  </li>
-                                  <li>
-                                    <img src="img/icon/usb-c.jpg" alt="">
-                                    USB Type C Cable x 1
-                                  </li>
-                                </ul>
-                            </li>
+                        <div class="photos-products">
+                          <div class="photo">
+                            <img src="img/products/pared-1/cables.jpg" alt="" class="img-responsive">
+                          </div>
+                          <div class="text">
+                            <p>Permite cargar 8 dispositivos simultáneos.</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="list-description">
+                        <h3>Especificaciones</h3>
+                        <ul>
+                          <li>
+                            <p>
+                              <b>Dimensiones:</b>
+                              1310 x 480 x 285 mm
+                            </p>
+                          </li>
+                          <li>
+                            <p>
+                              <b>Salida de energia:</b>
+                              5V/ 1.5A x8
+                            </p>
+                          </li>
                         </ul>
+                      </div>
+                      <div class="list-connection">
+                        <h3>Cables de Carga</h3>
+                        <ul>
+                          <li>
+                            <img src="img/icon/usb-1.jpg" alt="">Micro USB Cable
+                          </li>
+                          <li>
+                            <img src="img/icon/apple-l.jpg" alt="">Apple MFi Lightning Cable
+                          </li>
+                          <li>
+                            <img src="img/icon/apple-large.jpg" alt="">Apple Cable Cable
+                          </li>
+                          <li>
+                            <img src="img/icon/usb-c.jpg" alt="">USB Type C Cable
+                          </li>
+                        </ul>
+                      </div>
                     </div>
                 </div>
             </div>
