--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   </div>
                 </div>
                 <div class="img">
-                  <img src="img/product.png" class="img-responsive" alt="">
+                  <img src="img/main.png" class="img-responsive" alt="">
                 </div>
               </div>
             </div>
