--- a/kiosco-1.html
+++ b/kiosco-1.html
@@ -50,7 +50,7 @@
               <div class="text_center_slider ">
                 <div class="txt">                  
                   <h1>
-                    <span>6 Power Banks</span>
+                    <span>Kiosco de carga de 12 salidas</span>
                   </h1>
                 </div>
               </div>
@@ -64,99 +64,98 @@
             <div class="col-md-12">
                 <div class="detail-product">
                     <div class="product-img">
-                        <img src="img/products/kiosko-1.png" alt="6 Power Banks" class="img-responsive">
+                        <img src="img/products/kiosko-1.png" alt="Kiosco de carga de 12 salidas" class="img-responsive">
                     </div>
                     <div class="product-description">
-                        <h2>6 Power Banks</h2>
-                        <p>Perfecto para:</p>
-                        <ul class="list-description">
-                          <li>Casinos</li>
+                      <h2>Kiosco de carga de 12 salidas</h2>
+                      <p>Super Power Station</p>
+                      <div class="list-description">
+                        <h3>Perfecto para:</h3>
+                        <ul>
+                          <li>Hoteles</li>
+                          <li>Bares</li>
                           <li>Cafes</li>
                           <li>Restaurants</li>
-                          <li>Bares</li>
-                          <li>Resorts</li>
-                          <li>Clubes nocturnos</li>
-                          <li>Clubes de Golf</li>
                         </ul>
-                        <div class="content-photos-products">
-                          <div class="photos-products">
-                            <div class="photo">
-                              <img src="img/products/mesa-1/design.jpg" alt="" class="img-responsive">
-                            </div>
-                            <div class="text">
-                              <p>Publicidad Customizable</p>
-                            </div>
+                      </div>
+                      <div class="content-photos-products">
+                        <div class="photos-products">
+                          <div class="photo">
+                            <img src="img/products/kiosko-1/ads.jpg" alt="" class="img-responsive">
                           </div>
-                          <div class="photos-products">
-                            <div class="photo">
-                              <img src="img/products/6-power-banks/promo-01.jpg" alt="" class="img-responsive">
-                            </div>
-                            <div class="text">
-                              <p>Mantenga a sus clientes con carga mientras se divierten</p>
-                            </div>
-                          </div>
-                          <div class="photos-products">
-                            <div class="photo">
-                              <img src="img/products/features/" alt="" class="img-responsive">
-                            </div>
-                            <div class="text">
-                              <p>Seis espacios de carga de Power Bank: Carga hasta 6 Power Banks al mismo tiempo</p>
-                            </div>
-                          </div>
-                          <div class="photos-products">
-                            <div class="photo">
-                              <img src="img/products/mesa-1/cables.jpg" alt="" class="img-responsive">
-                            </div>
-                            <div class="text">
-                              <p>Box para cambio de cables: Limpio y Ordenado</p>
-                            </div>
+                          <div class="text">
+                            <p>Publicidad Customizable</p>
                           </div>
                         </div>
-                        <ul class="list-description">
-                            <li>
-                                <p>
-                                  <b>Dimensiones:</b>
-                                  260 x 230 x 160mm
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                  <b>Salida de energia:</b>
-                                  5V/ 1.5A
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                  <b>Cantidad de Power Banks:</b>
-                                  6 PCS
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                  <b>Capacidad de Batería:</b>
-                                  5000mAh
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                  <b>Cables de Carga:</b>
-                                </p>
-                                <ul class="list-connection">
-                                  <li>
-                                    <img src="img/icon/usb-1.jpg" alt="">
-                                    Micro USB Cable x 2
-                                  </li>
-                                  <li>
-                                    <img src="img/icon/apple-l.jpg" alt="">
-                                    Apple MFi Lightning Cable x 1
-                                  </li>
-                                  <li>
-                                    <img src="img/icon/usb-c.jpg" alt="">
-                                    USB Type C Cable x 1
-                                  </li>
-                                </ul>
-                            </li>
+                        <div class="photos-products">
+                          <div class="photo">
+                            <img src="img/products/kiosko-1/cables.jpg" alt="" class="img-responsive">
+                          </div>
+                          <div class="text">
+                            <p>Cables auto-retraibles de alta calidad</p>
+                          </div>
+                        </div>
+                        <div class="photos-products">
+                          <div class="photo">
+                            <img src="img/products/kiosko-1/lights.jpg" alt="" class="img-responsive">
+                          </div>
+                          <div class="text">
+                            <p>Publicidad luminosa</p>
+                          </div>
+                        </div>
+                        <div class="photos-products">
+                          <div class="photo">
+                            <img src="img/products/kiosko-1/power-oultes.jpg" alt="" class="img-responsive">
+                          </div>
+                          <div class="text">
+                            <p>
+                              <b>Power Outlets</b> Carga y potencia para distintos tipos de dispositivos.</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="list-description">
+                        <h3>Especificaciones</h3>
+                        <ul>
+                          <li>
+                            <p>
+                              <b>Dimensiones:</b>
+                              1460 x 450 x 450 mm
+                            </p>
+                          </li>
+                          <li>
+                            <p>
+                              <b>Salida de energia:</b>
+                              5V/ 1.0A
+                            </p>
+                          </li>
+                          <li>
+                            <p>
+                              <b>Cantidad de Cables:</b>
+                              10
+                            </p>
+                          </li>
+                          <li>
+                            <p>
+                              <b>Capacidad de Batería:</b>
+                              5000mAh
+                            </p>
+                          </li>
                         </ul>
+                      </div>
+                      <div class="list-connection">
+                        <h3>Cables de Carga</h3>
+                        <ul>
+                          <li>
+                            <img src="img/icon/usb-1.jpg" alt=""> Micro USB Cable
+                          </li>
+                          <li>
+                            <img src="img/icon/apple-l.jpg" alt=""> Apple MFi Lightning Cable
+                          </li>
+                          <li>
+                            <img src="img/icon/usb-c.jpg" alt=""> USB Type C Cable
+                          </li>
+                        </ul>
+                      </div>
                     </div>
                 </div>
             </div>
