--- a/lockers-1.html
+++ b/lockers-1.html
@@ -65,7 +65,7 @@
           <div class="text_center_slider ">
             <div class="txt">
               <h1>
-                <span>6 Power Banks</span>
+                <span>Locker de carga de 8 celdas Kiosco</span>
               </h1>
             </div>
           </div>
@@ -79,24 +79,32 @@
       <div class="col-md-12">
         <div class="detail-product">
           <div class="product-img">
-            <img src="img/products/lockers-1.png" alt="6 Power Banks" class="img-responsive">
+            <img src="img/products/lockers-1.png" alt="Locker de carga de 8 celdas Kiosco" class="img-responsive">
           </div>
           <div class="product-description">
-            <h2>6 Power Banks</h2>
-            <p>Perfecto para:</p>
-            <ul class="list-description">
-              <li>Casinos</li>
-              <li>Cafes</li>
-              <li>Restaurants</li>
-              <li>Bares</li>
-              <li>Resorts</li>
-              <li>Clubes nocturnos</li>
-              <li>Clubes de Golf</li>
-            </ul>
+            <h2>Locker de carga de 8 celdas Kiosco</h2>
+            <p>Super Power Station</p>
+            <div class="list-description">
+              <h3>Perfecto para:</h3>
+              <ul>
+                <li>Clubes Privados</li>
+                <li>Lugares de trabajo</li>
+                <li>Clubes de Golf</li>
+                <li>Centros de deporte</li>
+              </ul>
+            </div>
             <div class="content-photos-products">
               <div class="photos-products">
                 <div class="photo">
-                  <img src="img/products/6-power-banks/promo-3.jpg" alt="" class="img-responsive">
+                  <img src="img/products/lockers-1/pin.jpg" alt="" class="img-responsive">
+                </div>
+                <div class="text">
+                  <p>8 Lockers con Código PIN</p>
+                </div>
+              </div>
+              <div class="photos-products">
+                <div class="photo">
+                  <img src="img/products/lockers-1/ads.jpg" alt="" class="img-responsive">
                 </div>
                 <div class="text">
                   <p>Publicidad Customizable</p>
@@ -104,71 +112,57 @@
               </div>
               <div class="photos-products">
                 <div class="photo">
-                  <img src="img/products/6-power-banks/promo-01.jpg" alt="" class="img-responsive">
+                  <img src="img/products/lockers-1/material.jpg" alt="" class="img-responsive">
                 </div>
                 <div class="text">
-                  <p>Mantenga a sus clientes con carga mientras se divierten</p>
-                </div>
-              </div>
-              <div class="photos-products">
-                <div class="photo">
-                  <img src="img/products/6-power-banks/promo-02.jpg" alt="" class="img-responsive">
-                </div>
-                <div class="text">
-                  <p>Seis espacios de carga de Power Bank: Carga hasta 6 Power Banks al mismo tiempo</p>
-                </div>
-              </div>
-              <div class="photos-products">
-                <div class="photo">
-                  <img src="img/products/6-power-banks/promo-4.jpg" alt="" class="img-responsive">
-                </div>
-                <div class="text">
-                  <p>Box para cambio de cables: Limpio y Ordenado</p>
+                  <p>Construido con materiales de alta calidad: Proteje tu dispositivo de robos.</p>
                 </div>
               </div>
             </div>
-            <ul class="list-description">
-              <li>
-                <p>
-                  <b>Dimensiones:</b>
-                  260 x 230 x 160mm
-                </p>
-              </li>
-              <li>
-                <p>
-                  <b>Salida de energia:</b>
-                  5V/ 1.5A
-                </p>
-              </li>
-              <li>
-                <p>
-                  <b>Cantidad de Power Banks:</b>
-                  6 PCS
-                </p>
-              </li>
-              <li>
-                <p>
-                  <b>Capacidad de Batería:</b>
-                  5000mAh
-                </p>
-              </li>
-              <li>
-                <p>
-                  <b>Cables de Carga:</b>
-                </p>
-                <ul class="list-connection">
-                  <li>
-                    <img src="img/icon/usb-1.jpg" alt=""> Micro USB Cable x 2
-                  </li>
-                  <li>
-                    <img src="img/icon/apple-l.jpg" alt=""> Apple MFi Lightning Cable x 1
-                  </li>
-                  <li>
-                    <img src="img/icon/usb-c.jpg" alt=""> USB Type C Cable x 1
-                  </li>
-                </ul>
-              </li>
-            </ul>
+            <div class="list-description">
+              <h3>Especificaciones</h3>
+              <ul>
+                <li>
+                  <p>
+                    <b>Dimensiones:</b>
+                    485 x 605 x 200mm
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    <b>Salida de energia:</b>
+                    Micro USB Cable: 5V/ 1.0A
+                    <br> Apple MFi Lightning Cable: 5V/1.0
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    <b>Cantidad de Power Banks:</b>
+                    6 PCS
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    <b>Capacidad de Batería:</b>
+                    5000mAh
+                  </p>
+                </li>
+              </ul>
+            </div>
+            <div class="list-connection">
+              <h3>Cables de Carga</h3>
+              <ul>
+                <li>
+                  <img src="img/icon/usb-1.jpg" alt=""> Micro USB Cable
+                </li>
+                <li>
+                  <img src="img/icon/apple-l.jpg" alt=""> Apple MFi Lightning Cable
+                </li>
+                <li>
+                  <img src="img/icon/usb-c.jpg" alt=""> USB Type C Cable
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
