--- a/mesa-1.html
+++ b/mesa-1.html
@@ -68,23 +68,26 @@
                     </div>
                     <div class="product-description">
                         <h2>6 Power Banks</h2>
-                        <p>Perfecto para:</p>
-                        <ul class="list-description">
-                          <li>Casinos</li>
-                          <li>Cafes</li>
-                          <li>Restaurants</li>
-                          <li>Bares</li>
-                          <li>Resorts</li>
-                          <li>Clubes nocturnos</li>
-                          <li>Clubes de Golf</li>
-                        </ul>
+                        <p>Estación de Carga de Power Banks</p>
+                        <div class="list-description">
+                          <h3>Perfecto para:</h3>
+                          <ul>
+                            <li>Casinos</li>
+                            <li>Cafes</li>
+                            <li>Restaurants</li>
+                            <li>Bares</li>
+                            <li>Resorts</li>
+                            <li>Clubes nocturnos</li>
+                            <li>Clubes de Golf</li>
+                          </ul>
+                        </div>
                         <div class="content-photos-products">
                           <div class="photos-products">
                             <div class="photo">
                               <img src="img/products/mesa-1/design.jpg" alt="" class="img-responsive">
                             </div>
                             <div class="text">
-                              <p>Publicidad Customizable</p>
+                              <p><b>Publicidad Customizable</b></p>
                             </div>
                           </div>
                           <div class="photos-products">
@@ -92,7 +95,7 @@
                               <img src="img/products/features/meeting.jpg" alt="" class="img-responsive">
                             </div>
                             <div class="text">
-                              <p>Mantenga a sus clientes con carga mientras se divierten</p>
+                              <p><b>Mantenga a sus clientes con carga mientras se divierten</b></p>
                             </div>
                           </div>
                           <div class="photos-products">
@@ -100,7 +103,7 @@
                               <img src="img/products/features/dinner.jpg" alt="" class="img-responsive">
                             </div>
                             <div class="text">
-                              <p>Seis espacios de carga de Power Bank: Carga hasta 6 Power Banks al mismo tiempo</p>
+                              <p><b>Seis espacios de carga de Power Bank</b>Carga hasta 6 Power Banks al mismo tiempo</p>
                             </div>
                           </div>
                           <div class="photos-products">
@@ -108,55 +111,53 @@
                               <img src="img/products/mesa-1/cables.jpg" alt="" class="img-responsive">
                             </div>
                             <div class="text">
-                              <p>Box para cambio de cables: Limpio y Ordenado</p>
+                              <p><b>Box para cambio de cables</b> Limpio y Ordenado</p>
                             </div>
                           </div>
                         </div>
-                        <ul class="list-description">
+                        <div class="list-description">
+                          <h3>Especificaciones</h3>
+                          <ul>
+                              <li>
+                                  <p>
+                                    <b>Dimensiones:</b>
+                                    260 x 230 x 160mm
+                                  </p>
+                              </li>
+                              <li>
+                                  <p>
+                                    <b>Salida de energia:</b>
+                                    5V/ 1.5A
+                                  </p>
+                              </li>
+                              <li>
+                                  <p>
+                                    <b>Cantidad de Power Banks:</b>
+                                    6 PCS
+                                  </p>
+                              </li>
+                              <li>
+                                  <p>
+                                    <b>Capacidad de Batería:</b>
+                                    5000mAh
+                                  </p>
+                              </li>
+                          </ul>
+                        </div>
+                        <div class="list-connection">
+                          <h3>Cables de Carga</h3>
+                          <ul>
                             <li>
-                                <p>
-                                  <b>Dimensiones:</b>
-                                  260 x 230 x 160mm
-                                </p>
+                              <img src="img/icon/usb-1.jpg" alt=""> Micro USB Cable
                             </li>
                             <li>
-                                <p>
-                                  <b>Salida de energia:</b>
-                                  5V/ 1.5A
-                                </p>
+                              <img src="img/icon/apple-l.jpg" alt=""> Apple MFi Lightning Cable
                             </li>
                             <li>
-                                <p>
-                                  <b>Cantidad de Power Banks:</b>
-                                  6 PCS
-                                </p>
+                              <img src="img/icon/usb-c.jpg" alt=""> USB Type C Cable
                             </li>
-                            <li>
-                                <p>
-                                  <b>Capacidad de Batería:</b>
-                                  5000mAh
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                  <b>Cables de Carga:</b>
-                                </p>
-                                <ul class="list-connection">
-                                  <li>
-                                    <img src="img/icon/usb-1.jpg" alt="">
-                                    Micro USB Cable x 2
-                                  </li>
-                                  <li>
-                                    <img src="img/icon/apple-l.jpg" alt="">
-                                    Apple MFi Lightning Cable x 1
-                                  </li>
-                                  <li>
-                                    <img src="img/icon/usb-c.jpg" alt="">
-                                    USB Type C Cable x 1
-                                  </li>
-                                </ul>
-                            </li>
-                        </ul>
+                          </ul>
+                        </div>
                     </div>
                 </div>
             </div>
