--- a/mesa-1.html
+++ b/mesa-1.html
@@ -199,88 +199,92 @@
         </div>
       </section>
 
-      <footer id="contacto">
-        <div class="slider  separator_top ">
-          <div class="gradiant">
-            <img src="img/slider/slide_2.jpg" alt="" class="img-responsive img_slider">
-          </div>
-          <div class="flex_center">
-            <div class="flex_item">
-              <div class="flex_formulario">
-                <div class="right">
-                  <form>
-                    <h3>Contactanos</h3>
-                    <div class="form-group select-content">
-                      <p>Motivo del contacto</p>
-                      <select value="motivo" id="motivo">
-                        <option name="compra">Compra</option>
-                        <option name="alquiler">Alquiler</option>
-                        <option name="eventos">Eventos</option>
-                        <option name="publicita">Publicita</option>
-                      </select>
-                    </div>
-                    <div class="form-group">
-                      <input type="text" class="form-control" id="name" placeholder="Nombre" required>
-                    </div>
-                    <div class="form-group">
-                      <input type="text" class="form-control" id="phone" placeholder="Teléfono" required>
-                    </div>
-                    <div class="form-group">
-                      <input type="email" class="form-control" id="mail" placeholder="Email" required>
-                    </div>
-                    <div class="form-group">
-                      <textarea class="form-control" id="comment" rows="3" placeholder="Comentarios" required></textarea>
-                    </div>
-                    <div class="form-group">
-                      <div class="g-recaptcha" data-sitekey="6Lc1MiUUAAAAAHfSrItQh93qMGrvd48pYmKprRQX"></div>
-                    </div>
-                    <div class="form-group">
-                      <button type="submit" class="btn">Enviar</button>
-                    </div>
-                    <div class="messgmodal">
-                      <div class="flex">
-                        <div class="flex_item">
-                          <div class="spinner"></div>
-                        </div>
+      <footer id="contacto" class="separator_top">
+        <div class="flex_center gradiant">
+          <div class="flex_item">
+            <div class="flex_formulario">
+              <div class="right">
+                <form>
+                  <h3>Contactanos</h3>
+                  <div class="form-group select-content">
+                    <p>Motivo del contacto</p>
+                    <select value="motivo" id="motivo">
+                      <option name="compra">Compra</option>
+                      <option name="alquiler">Alquiler</option>
+                      <option name="eventos">Eventos</option>
+                      <option name="publicita">Publicita</option>
+                    </select>
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" id="name" placeholder="Nombre" required>
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" id="phone" placeholder="Teléfono" required>
+                  </div>
+                  <div class="form-group">
+                    <input type="email" class="form-control" id="mail" placeholder="Email" required>
+                  </div>
+                  <div class="form-group">
+                    <textarea class="form-control" id="comment" rows="3" placeholder="Comentarios" required></textarea>
+                  </div>
+                  <div class="form-group">
+                    <div class="g-recaptcha" data-sitekey="6Lc1MiUUAAAAAHfSrItQh93qMGrvd48pYmKprRQX"></div>
+                  </div>
+                  <div class="form-group">
+                    <button type="submit" class="btn">Enviar</button>
+                  </div>
+                  <div class="messgmodal">
+                    <div class="flex">
+                      <div class="flex_item">
+                        <div class="spinner"></div>
                       </div>
                     </div>
-                  </form>
-                </div>
-                <div class="left">
-                  <h3>Ubicanos</h3>
-                  <ul class="direccion">
-                    <li>
-                      <b>Dirección:</b>
-                      Blanca del Tabaré 2945
-                    </li>
-                    <li>
-                      <b>Teléfono:</b>
-                      <a href="tel:+59899643550">+598 99 643 550</a>
-                    </li>
-                    <li>
-                      <b>Email:</b>
-                      <a href="mailto:hola@easycharge.com.uy​">hola@easycharge.com.uy​</a>
-                    </li>
-                  </ul>
-                  <hr>
-                  <h3>Redes sociales</h3>
-                  <ul class="social">
-                    <li>
-                        <a href="https://www.facebook.com/easychargeuy/" target="_blank">
-                            <svg height="90" version="1.1" viewBox="0 0 90 90" width="90" x="0" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" y="0"><path d="M90 15C90 7.1 82.9 0 75 0H15C7.1 0 0 7.1 0 15v60C0 82.9 7.1 90 15 90H45V56H34V41h11v-5.8C45 25.1 52.6 16 61.9 16H74v15H61.9C60.5 31 59 32.6 59 35V41h15v15H59v34h16c7.9 0 15-7.1 15-15V15z" fill="rgb(2, 180, 182)"></path></svg>
-                        </a>
-                    </li>
-                    <li>    
-                        <a href="https://www.instagram.com/easychargeuy/" target="_blank">
-                            <svg height="169.1" version="1.1" viewBox="0 0 169.1 169.1" width="169.1" x="0" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" y="0">
-                                <style type="text/css">.s0{fill:rgb(2, 180, 182);}
-                                </style>
-                                <path d="M122.4 0H46.7C20.9 0 0 20.9 0 46.7v75.8c0 25.7 20.9 46.7 46.7 46.7h75.8c25.7 0 46.7-20.9 46.7-46.7V46.7C169.1 20.9 148.1 0 122.4 0zM154.1 122.4c0 17.5-14.2 31.7-31.7 31.7H46.7C29.2 154.1 15 139.9 15 122.4V46.7C15 29.2 29.2 15 46.7 15h75.8c17.5 0 31.7 14.2 31.7 31.7V122.4zM84.5 41c-24 0-43.6 19.5-43.6 43.6 0 24 19.5 43.6 43.6 43.6s43.6-19.5 43.6-43.6C128.1 60.5 108.6 41 84.5 41zM84.5 113.1c-15.7 0-28.6-12.8-28.6-28.6 0-15.7 12.8-28.6 28.6-28.6s28.6 12.8 28.6 28.6C113.1 100.3 100.3 113.1 84.5 113.1zM129.9 28.3c-2.9 0-5.7 1.2-7.8 3.2 -2.1 2-3.2 4.9-3.2 7.8 0 2.9 1.2 5.7 3.2 7.8 2 2 4.9 3.2 7.8 3.2 2.9 0 5.7-1.2 7.8-3.2 2.1-2 3.2-4.9 3.2-7.8 0-2.9-1.2-5.7-3.2-7.8C135.7 29.4 132.8 28.3 129.9 28.3z" fill="rgb(2, 180, 182)"></path>
-                            </svg>
-                        </a>
-                    </li>
-                  </ul>
-                </div>
+                  </div>
+                </form>
+              </div>
+              <div class="left">
+                <h3>Ubicanos</h3>
+                <ul class="direccion">
+                  <li>
+                    <b>Dirección:</b>
+                    Blanca del Tabaré 2945
+                  </li>
+                  <li>
+                    <b>Teléfono:</b>
+                    <a href="tel:+59899643550">+598 99 643 550</a>
+                  </li>
+                  <li>
+                    <b>Email:</b>
+                    <a href="mailto:hola@easycharge.com.uy​">hola@easycharge.com.uy​</a>
+                  </li>
+                </ul>
+                <hr>
+                <h3>Redes sociales</h3>
+                <ul class="social">
+                  <li>
+                    <a href="https://www.facebook.com/easychargeuy/" target="_blank">
+                      <svg height="90" version="1.1" viewBox="0 0 90 90" width="90" x="0" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
+                        y="0">
+                        <path d="M90 15C90 7.1 82.9 0 75 0H15C7.1 0 0 7.1 0 15v60C0 82.9 7.1 90 15 90H45V56H34V41h11v-5.8C45 25.1 52.6 16 61.9 16H74v15H61.9C60.5 31 59 32.6 59 35V41h15v15H59v34h16c7.9 0 15-7.1 15-15V15z"
+                          fill="rgb(2, 180, 182)"></path>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.instagram.com/easychargeuy/" target="_blank">
+                      <svg height="169.1" version="1.1" viewBox="0 0 169.1 169.1" width="169.1" x="0" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
+                        y="0">
+                        <style type="text/css">
+                          .s0 {
+                            fill: rgb(2, 180, 182);
+                          }
+                        </style>
+                        <path d="M122.4 0H46.7C20.9 0 0 20.9 0 46.7v75.8c0 25.7 20.9 46.7 46.7 46.7h75.8c25.7 0 46.7-20.9 46.7-46.7V46.7C169.1 20.9 148.1 0 122.4 0zM154.1 122.4c0 17.5-14.2 31.7-31.7 31.7H46.7C29.2 154.1 15 139.9 15 122.4V46.7C15 29.2 29.2 15 46.7 15h75.8c17.5 0 31.7 14.2 31.7 31.7V122.4zM84.5 41c-24 0-43.6 19.5-43.6 43.6 0 24 19.5 43.6 43.6 43.6s43.6-19.5 43.6-43.6C128.1 60.5 108.6 41 84.5 41zM84.5 113.1c-15.7 0-28.6-12.8-28.6-28.6 0-15.7 12.8-28.6 28.6-28.6s28.6 12.8 28.6 28.6C113.1 100.3 100.3 113.1 84.5 113.1zM129.9 28.3c-2.9 0-5.7 1.2-7.8 3.2 -2.1 2-3.2 4.9-3.2 7.8 0 2.9 1.2 5.7 3.2 7.8 2 2 4.9 3.2 7.8 3.2 2.9 0 5.7-1.2 7.8-3.2 2.1-2 3.2-4.9 3.2-7.8 0-2.9-1.2-5.7-3.2-7.8C135.7 29.4 132.8 28.3 129.9 28.3z"
+                          fill="rgb(2, 180, 182)"></path>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
